--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 html {
   height: 100%;
-  background-color: black;
 }
 
 body {
@@ -8,4 +7,5 @@ body {
   padding:0;
   font-family: sans-serif;
   height: 100%;
+  text-align: center;
 }
