--- a/src/WatermelonApp/style/wallet.css
+++ b/src/WatermelonApp/style/wallet.css
@@ -122,6 +122,17 @@ body {
     padding-right: 5%;
 }
 
+.container li  {
+    list-style: none; 
+    display: block;
+    text-align: left;
+    padding: 0.5em 2em 0.5em 1em;
+    text-decoration: none ;
+    color: black ;    
+    font-size: 0.8em;
+}
+
+
 
 .ico-text {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -161,6 +172,7 @@ body {
     background-image: linear-gradient(to right top, #000b83, #002a84, #003676, #003c62, #00404e);
     border: white 2px solid;
     width: fit-content;
+    overflow:hidden;
 }
 
 .container input, span, .display-value{
