--- a/src/WatermelonApp/style/transfermenu.css
+++ b/src/WatermelonApp/style/transfermenu.css
@@ -12,12 +12,15 @@
     background-image: linear-gradient(to right top, #ff0000, #de012f, #b51f41, #892e47, #5b3341);
 }
 
+.container section .user-choice .element, .selected{
+    margin:1em 1em 1em 1em;
+}
+
 .container section .user-choice .element:hover, .selected:hover{
     background-image: linear-gradient(to right top, #38b1b7, #00aecf, #00a9e5, #3d9ff3, #8190f4);
     cursor: pointer;
 }
 
 .container section .user-choice{
-    min-width:50%;
-    float: left;
+    display: inline-block;
 }
