--- a/src/WatermelonApp/style/wallet.css
+++ b/src/WatermelonApp/style/wallet.css
@@ -102,8 +102,8 @@ body {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 2em;
     padding: 2% 2% 2% 2%;
-    margin-left:15%;
-}
+    margin-left: 15%;
+    }
 
 .container .ico, .ico_number{
      -webkit-filter: invert(100%);
@@ -163,17 +163,16 @@ body {
     background-image: linear-gradient(to right top, #0c0a2c, #061758, #002187, #0029b8, #122eeb);
     border: white 2px solid;
     color:white;
-    padding : 5px 5px 5px 5px;
+    margin: 0 auto;
+    padding : 0.5em 0.5em 0.5em 0.5em;
     margin-bottom: 1em;
  }
 
 .container section {
     margin: auto;
-    min-width: 30%;
     color:white;
     vertical-align: middle;
     margin-bottom:1em;
-    width: 50%;
     padding: 2% 10% 2% 10%;
     text-align: center;
     background-image: linear-gradient(to right top, #000b83, #002a84, #003676, #003c62, #00404e);
