--- a/src/WatermelonApp/style/walletmenu.css
+++ b/src/WatermelonApp/style/walletmenu.css
@@ -5,6 +5,12 @@
     margin-bottom: 0.5em;
 }
 
+.card-description li{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 .section-element{
     padding-top: 0.5em;
 }
@@ -52,8 +58,4 @@ section .section-element{
 
 #edit:hover{
     background-image: linear-gradient(to right top, #199bd5, #148ac1, #0e79ae, #07689a, #005887);   
-}
-
-#min-width{
-    min-width: 30%;
 }
