--- a/src/WatermelonApp/style/wallet.css
+++ b/src/WatermelonApp/style/wallet.css
@@ -65,6 +65,10 @@ body {
     width:80px;
 }
 
+.logo-element .logo {
+
+}
+
 .navigation .logo-text {
     display: block;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -95,6 +99,10 @@ body {
 #admin-selected {
     background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
     radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+}
+
+#element-selected {
+    background-image: linear-gradient(to right top, #ff0000, #de012f, #b51f41, #892e47, #5b3341);
 }
 
 #text-ico-below{
