--- a/src/WatermelonApp/style/historymenu.css
+++ b/src/WatermelonApp/style/historymenu.css
@@ -22,7 +22,7 @@
     float: left;
 }
 
-.container .section-action .history-container .element .ico_non_reverse:hover{
+.container .section-action .history-container .element .ico-non-reverse:hover{
     height:50px;
 }
 
