--- a/src/WatermelonApp/style/usermanagermenu.css
+++ b/src/WatermelonApp/style/usermanagermenu.css
@@ -12,7 +12,7 @@
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.operation .ico_non_reverse{
+.operation .ico-non-reverse{
     vertical-align: middle;   
     margin-right: 1em;
 }
