--- a/src/WatermelonApp/style/transfermanagermenu.css
+++ b/src/WatermelonApp/style/transfermanagermenu.css
@@ -44,3 +44,10 @@
     color:red;
 }
 
+#return-deleted {
+    color:red;
+    text-decoration: none;
+    font-style: italic;
+    font-family: 'Haettenschweiler' , 'Arial Narrow Bold', sans-serif;
+    font-size:0.8em;
+}
